# ttftot42

./: AUTHORS  ChangeLog  Makefile  Makefile.am  NEWS  README  README.md  REFERENCES  THANKS  TODO  acidtocid.c  basename.c  cid-format  cid.h  cid_aread.c  cid_awrite.c  cid_decode.c  cid_mkmap.c  cid_read.c  cid_util.c  cid_write.c  cidtoacid.c  close_font.c  config.h  configure.ac  configure.in  enc_latin1.c  enc_pdf.c  enc_standard.c  encodings.c  ftxtbls.c  get_name.c  init.c  main.c  mkfontmap  names.c  notice  open_font.c  pideid.c  pideid.h  (+12 more)
cid/: Makefile.am  ac10.acid  ag12.acid  aj12.acid  aj20.acid  ak11.acid  index  template.acid
