AC_INIT(write_t42.c)
AM_INIT_AUTOMAKE(ttftot42, 0.3c+)
AM_CONFIG_HEADER(config.h)

AC_ARG_WITH(freetype,
    [  --with-freetype=PREFIX  specify prefix for FreeType library],,
    with_freetype=yes)

# We want these before the checks, so the checks can modify their values.
test -z "$CFLAGS" && CFLAGS='-g -Wall' auto_cflags=1
dnl test -z "$CFLAGS" && CFLAGS='-g -Wall -I/usr/local/include' auto_cflags=1
dnl test -z "$LDFLAGS" && LDFLAGS='-L/usr/local/lib' auto_ldflags=1

dnl AC_CANONICAL_HOST
dnl AM_PROG_LIBTOOL
AC_PROG_CC
dnl AM_PROG_INSTALL

if test "$with_freetype" = "no"
then
	AC_MSG_ERROR(this program does not work without freetype)
fi

if test "$with_freetype" != "yes"
then
    if test -f "$with_freetype"/lib/freetype.h
    then
	# PREFIX is to uninstalled version in distribution directory
	# XXX: check for newer versions of freetype
	FREETYPE_INCLUDE="$with_freetype/lib"
	LDFLAGS="$LDFLAGS -L$with_freetype/lib"
    else
	# PREFIX is installation prefix
	FREETYPE_INCLUDE="$with_freetype/include"
	LDFLAGS="$LDFLAGS -L$with_freetype/lib -Wl,-R$with_freetype/lib"
    fi
fi
CFLAGS="$CFLAGS -I$FREETYPE_INCLUDE"


AC_CHECK_LIB(ttf, TT_Open_Face)

old_CPPFLAGS="$CPPFLAGS"
CPPFLAGS="$CPPFLAGS -I$FREETYPE_INCLUDE"
AC_CHECK_HEADERS(freetype/freetype.h freetype.h)
CPPFLAGS="$old_CPPFLAGS"

if test "$ac_cv_lib_ttf_TT_Open_Face" != "yes"
then
    AC_MSG_ERROR(FreeType library not found -- cannot continue)
fi
if test "$ac_cv_header_freetype_freetype_h" != "yes" \
   -a "$ac_cv_header_freetype_h" != "yes" 
then
    AC_MSG_ERROR(FreeType includes not found -- cannot continue)
fi

AC_CHECK_HEADERS(libgen.h)

AC_CHECK_FUNCS(TTO_GSUB_Apply)

AC_REPLACE_FUNCS(strdup strerror basename)
AC_CHECK_FUNCS(getopt_long, , [LIBOBJS="$LIBOBJS getopt1.o getopt.o"])

AC_OUTPUT(Makefile cid/Makefile)
